--- a/index.html
+++ b/index.html
@@ -35,6 +35,45 @@
         </div>
     </section>
 
+     <section id="structure">
+        <div class="structure-container">
+            <div class="section-heading">
+                <h2>Notes don't fail, Structure does.</h2>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+        <div class="structure-box">
+            <div class="structure-card">
+                <div class="circle ">
+                <img src="./assets/Vector.png" alt="">
+                </div>
+                <h3>Scattered notes</h3>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="structure-card">
+                <div class="circle ">
+                <img src="./assets/Bookmarks.png" alt="">
+                </div>
+                <h3>Bookmark overload</h3>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="structure-card">
+                <div class="circle ">
+                <img src="./assets/Brain.png" alt="">
+                </div>
+                <h3>No idea connections</h3>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="structure-card">
+                <div class="circle">
+                <img src="./assets/Info.png" alt="">
+                </div>
+                <h3>Forgetting what you learned</h3>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+             </div>
+       </div>
+    </section>
+
 
 </body>
 </html>
