--- a/index.html
+++ b/index.html
@@ -74,6 +74,37 @@
        </div>
     </section>
 
-
+<section id="knowledge">
+    <div class="knowledge-container">
+        <div>
+            <img src="./assets/knowledge.png" alt="">
+        </div>
+        <div class="knowledge-content">
+            <h4 style="color: #469165;;">The Solution</h4>
+            <h1>Your second brain,<br>structured by design.</h1>
+            <p>Personal Knowledge Vault isn't another note-taking app. z <br>
+                It's a thinking environment where every note, link, and summary <br>
+                becomes part of an interconnected web of understanding.</p>
+            <div class="point">
+                <div class="CheckCircle">
+                <img src="./assets/CheckCircle.png" alt=""> &nbsp;
+                <h3>Capture ideas with structure built-in from day one</h3>
+                </div>
+                <div class="CheckCircle">
+                <img src="./assets/CheckCircle.png" alt=""> &nbsp;
+                <h3>Connect related concepts automatically as you write</h3>
+                </div>
+                <div class="CheckCircle">
+                <img src="./assets/CheckCircle.png" alt=""> &nbsp;
+                <h3>Build lasting knowledge through reflection prompts</h3>
+                </div>
+                 <div class="CheckCircle">
+                 <img src="./assets/CheckCircle.png" alt=""> &nbsp;
+                 <h3>Find anything instantly with semantic search</h3>
+                 </div>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
