Ready Section added

--- a/index.html
+++ b/index.html
@@ -106,5 +106,18 @@
         </div>
     </div>
 </section>
+
+<section id="ready">
+    <div class="ready-container">
+        <div class="ready-content">
+        <h1 style="font-size: 40px;padding-bottom: 20px;">Ready to think more clearly?</h1>
+         <p>Join thousands of learners who are building their personal knowledge vaults.<br>Start free, no credit card required.</p>
+        <div class="btnset">
+         <button class="btn">Get Early Access &#10140;</button>
+        <p  style="padding-top: 20px;">Free during early access • No credit card needed</p>
+        </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
