--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <nav class="nav-container">
@@ -35,7 +35,7 @@
         </div>
     </section>
 
-     <section id="structure">
+    <section id="structure">
         <div class="structure-container">
             <div class="section-heading">
                 <h2>Notes don't fail, Structure does.</h2>
@@ -73,6 +73,7 @@
              </div>
        </div>
     </section>
+
 
 <section id="knowledge">
     <div class="knowledge-container">
@@ -119,7 +120,6 @@
         </div>
     </div>
 </section>
-
 <section id="footer">
     <div class="footer-container">
         <div class="logo">
@@ -148,5 +148,8 @@
     </div>
     
 </section>
+
 </body>
 </html>
+
+<!-- MD. Riyad Hossain Batch 13 -->
